# imge

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-check.yml  rust-clippy.yml
screenshots/: 1-main.avif  2-keybindings.avif  3-warning.avif  4-copying.avif  4-progress.avif  5-verifying.avif  5-victory.avif  6-victory.avif
src/: imge.rs  main.rs  mainloop.rs
