[package]
name = "imge"
version = "0.2.1"
edition = "2021"
description = "Write disk images to physical drive or vice versa."
readme = "README.md"
repository = "https://github.com/gblach/imge"
license = "MPL-2.0"
keywords = ["cli", "filesystem", "linux", "tool", "tui"]
categories = ["command-line-utilities", "filesystem", "hardware-support"]

[dependencies]
argh = "0.1"
crossterm = "0.27"
derivative = "2.2"
drives = "0.6"
libarchive3-sys = "0.1"
mime = "0.3"
mime_guess = "2.0"
num-format = { version = "0.4", features = ["with-system-locale"] }
ratatui = "0.27"
tree_magic_mini = "3.1"

[profile.release]
strip = "symbols"
lto = "thin"
