[package]
name = "imge"
version = "0.5.1"
edition = "2024"
description = "Write disk images to physical drive or vice versa."
readme = "README.md"
repository = "https://github.com/gblach/imge"
license = "MPL-2.0"
keywords = ["cli", "filesystem", "linux", "tool", "tui"]
categories = ["command-line-utilities", "filesystem", "hardware-support"]

[dependencies]
argp = "0.4"
bzip2 = "0.6"
crossterm = "0.29"
derivative = "2"
drives = "0.6"
flate2 = "1"
libc = "0.2"
num-format = { version = "0.4", features = ["with-system-locale"] }
ratatui = "0.29"
xz2 = "0.1"
zstd = "0.13"

[profile.release]
strip = "symbols"
lto = "thin"
